# envialo

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: download.py  files.py  router.py  upload.py
app/core/: config.py  exceptions.py  security.py
app/db/: postgres.py  supabase.py
app/db/models/: file.py  transfer.py
app/repositories/: file_repo.py  transfer_repo.py
app/schemas/: transfer.py
app/services/: audit_service.py  download_service.py  email_service.py  storage_service.py  upload_service.py
app/workers/: cleanup_worker.py
frontend/: index.html
migrations/: env.py
migrations/versions/: 2b2262177de5_initial_schema.py
scripts/: run_worker.py  setup_supabase.sql
tests/: conftest.py  test_cleanup_worker.py  test_download.py  test_upload.py
