[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envialo"
version = "0.1.0"
description = "Clon de WeTransfer con FastAPI, PostgreSQL y Supabase"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "supabase==2.4.3",
    "pydantic-settings==2.2.1",
    "python-magic==0.4.27",
    "apscheduler==3.10.4",
    "python-multipart==0.0.9",
    "python-dateutil==2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]